--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,19 @@
 
 <h2></h2>
 
-<div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
     <form id="upload-file" method="post" enctype="multipart/form-data">
         <label for="imageUpload" class="upload-label">
             Select Image
         </label>
         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
     </form>
-
+            </div>
+        <div class="col-sm-4"></div>8
+    </div>
     <div class="image-section" style="display:none;">
         <div class="img-preview">
             <div id="imagePreview">
@@ -28,7 +33,7 @@
     <h3 id="result">
         <span> </span>
     </h3>
-
+</div>
 </div>
 <body>
 </body>
