--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,7 @@
 }
 
 .img-preview>div {
+    float : center;
     width: 100%;
     height: 100%;
     background-size: 256px 256px;
@@ -22,6 +23,7 @@ input[type="file"] {
 }
 
 .upload-label{
+    float : center;
     display: inline-block;
     padding: 12px 30px;
     background: #39D2B4;
