--- a/templates/index.html
+++ b/templates/index.html
@@ -16,20 +16,29 @@
         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
     </form>
             </div>
-        <div class="col-sm-4"></div>8
+        <div class="col-sm-4"></div>
     </div>
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
     <div class="image-section" style="display:none;">
         <div class="img-preview">
             <div id="imagePreview">
             </div>
         </div>
-        <div>
+            </div>
+    </div>
+    <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+    <div class="col-sm-4"
             <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
         </div>
+<div class="col-sm-4"></div>
     </div>
-
+     <div class="col-sm-4"></div>
+<div class="col-sm-4">
     <div class="loader" style="display:none;"></div>
-
+    <div class="col-sm-4"></div>
+<div class="col-sm-4"></div>
     <h3 id="result">
         <span> </span>
     </h3>
