--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
 <body>
-</body>
 
 <h2></h2>
 
@@ -18,6 +17,7 @@
             </div>
         <div class="col-sm-4"></div>
     </div>
+    <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
     <div class="image-section" style="display:none;">
@@ -28,22 +28,24 @@
             </div>
     </div>
     <div class="col-sm-4"></div>
+    </div>
+    <div class="row">
         <div class="col-sm-4"></div>
     <div class="col-sm-4"
             <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
         </div>
 <div class="col-sm-4"></div>
     </div>
+<div class="row">
      <div class="col-sm-4"></div>
 <div class="col-sm-4">
     <div class="loader" style="display:none;"></div>
+    </div>
     <div class="col-sm-4"></div>
-<div class="col-sm-4"></div>
+</div>
     <h3 id="result">
         <span> </span>
     </h3>
 </div>
-</div>
-<body>
 </body>
 {% endblock %}
