--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,14 @@
     </div>
     <div class="col-sm-4"></div>
 </div>
+<div class="row">
+     <div class="col-sm-4"></div>
+<div class="col-sm-4">
     <h3 id="result">
         <span> </span>
     </h3>
+    </div>
+    <div class="col-sm-4"></div>
 </div>
 </body>
 {% endblock %}
