--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <div class="row">
         <div class="col-sm-4"></div>
     <div class="col-sm-4"
-            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
+            <button type="button" class="btn btn-primary btn-small btn-light " id="btn-predict">Predict!</button>
         </div>
 <div class="col-sm-4"></div>
     </div>
