--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
         <div class="col-sm-4"></div>
-    <div class="col-sm-4"
+    <div class="col-sm-4">
             <button type="button" class="btn btn-primary btn-small btn-light " id="btn-predict">Predict!</button>
         </div>
 <div class="col-sm-4"></div>
