--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,7 +37,7 @@ input[type="file"] {
     background: #34495E;v
     color: #39D2B4;
 }
-.btn{
+.btn-predic{
 display : inline;
  height : 20px;
   width : 20px;
