--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <h2></h2>
 
-<div class="container">
+<div class="container" id="bg">
     <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
