--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,6 +42,9 @@ display : inline;
  height : 50px;
   width : 20px;
 }
+.bg{
+background-color :#b8b894 ;
+}
 
 .loader {
     border: 8px solid #f3f3f3; /* Light grey */
