--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h2></h2>
 
 <div class="container">
-    <div style="background-image = url('https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwj_m4jcvOHiAhULfH0KHfG4DBEQjRx6BAgBEAU&url=https%3A%2F%2Fwww.egainz.com%2Fblog%2Fhospital-website-design%2F&psig=AOvVaw2h-8mOvalmem940-Pelnki&ust=1560344036646531');">
+    <div style="background-image = url('https://www.egainz.com/blog/wp-content/uploads/2019/04/elevated-view-stethoscope-blue-background_23-2148050517.jpg');">
     <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
