--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h2></h2>
 
 <div class="container">
-    <div style="background-image = url('https://www.egainz.com/blog/wp-content/uploads/2019/04/elevated-view-stethoscope-blue-background_23-2148050517.jpg');">
+    <div style="background-image : url('https://www.egainz.com/blog/wp-content/uploads/2019/04/elevated-view-stethoscope-blue-background_23-2148050517.jpg');">
     <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
