--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 
 <body>
 
-    
-    <div class="container">
+<div style="background-image : url('https://www.egainz.com/blog/wp-content/uploads/2019/04/elevated-view-stethoscope-blue-background_23-2148050517.jpg');height:100% ; width:100%;background-size:100% 100%;">    <div class="container">
         <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
