--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Pneumonia Detection Web App</a>
+            <a class="navbar-brand" href="#">Pneumonia Detection</a>
         </div>
     </nav>
     <div class="container">
