--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<div style="background-image : urlhttps://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwim8byj4uPiAhWUH3AKHaFnC1oQjRx6BAgBEAU&url=https%3A%2F%2Fpngtree.com%2Ffreebackground%2Fdoctor-background_738530.html&psig=AOvVaw14Q3xA7HSYhol2FR6bRiiz&ust=1560422633381652 ;height:100% ; width:100%;background-size:100% 100%;">    <div class="container">
+<div style="background-image : url('https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwim8byj4uPiAhWUH3AKHaFnC1oQjRx6BAgBEAU&url=https%3A%2F%2Fpngtree.com%2Ffreebackground%2Fdoctor-background_738530.html&psig=AOvVaw14Q3xA7HSYhol2FR6bRiiz&ust=1560422633381652');height:100% ; width:100%;background-size:100% 100%;">    <div class="container">
         <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
