--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,4 @@
-.img-preview 
-    float : center;
+.img-preview {
     width: 256px;
     height: 256px;
     position: relative;
@@ -10,7 +9,6 @@
 }
 
 .img-preview>div {
-    float : center;
     width: 100%;
     height: 100%;
     background-size: 256px 256px;
@@ -23,9 +21,8 @@ input[type="file"] {
 }
 
 .upload-label{
-    float : center;
     display: inline-block;
-    padding: 30px 30px;
+    padding: 12px 30px;
     background: #39D2B4;
     color: #fff;
     font-size: 1em;
@@ -33,14 +30,9 @@ input[type="file"] {
     cursor: pointer;
 }
 
-.upload-label:hoer{
-    background: #34495E;v
+.upload-label:hover{
+    background: #34495E;
     color: #39D2B4;
-}
-.btn-predic{
-display : inline;
- height : 50px;
-  width : 20px;
 }
 
 .loader {
