--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 <body>
 
 <h2></h2>
-
+<div style="background-image : url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/65/13/1457adcf3a223b3.jpg');" >
+    
 <div>
     <form id="upload-file" method="post" enctype="multipart/form-data">
         <label for="imageUpload" class="upload-label">
@@ -29,6 +30,6 @@
     </h3>
 
 </div>
-
+    </div>
 </body>
 {% endblock %}
