--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2></h2>
-<div style="background-image : url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/65/13/1457adcf3a223b3.jpg');" >
+<div style="background-image : url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/65/13/1457adcf3a223b3.jpg');border:1px solid black;background-size: 100% 100%;" >
     
 <div>
     <form id="upload-file" method="post" enctype="multipart/form-data">
