--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <div style="background-image : url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/65/13/1457adcf3a223b3.jpg');border:1px solid black;background-size: 100% 100%;" >
+
     <nav class="navbar navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Pneumonia Detection</a>
