--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,33 @@
         <div style="background-image : url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/65/13/1457adcf3a223b3.jpg');border:1px solid black;background-size: 100% 100%;" >
 
     <div class="container">
-        <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
+        <div id="content" style="margin-top:2em">
+            <div>
+    <form id="upload-file" method="post" enctype="multipart/form-data">
+        <label for="imageUpload" class="upload-label">
+            Select Image
+        </label>
+        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
+    </form>
+
+    <div class="image-section" style="display:none;">
+        <div class="img-preview">
+            <div id="imagePreview">
+            </div>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
+        </div>
+    </div>
+
+    <div class="loader" style="display:none;"></div>
+
+    <h3 id="result">
+        <span> </span>
+    </h3>
+
+</div>
+        </div>
     </div>
     </div>
 </body>
