--- a/static/css/main.css
+++ b/static/css/main.css
@@ -48,3 +48,7 @@ input[type="file"] {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+#result {
+    margin-left: 40px;
+}
