--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a class="navbar-brand" href="#">Pneumonia Detection</a>
         </div>
     </nav>
-        <div style="background-image : url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/65/13/1457adcf3a223b3.jpg');border:1px solid black;background-size: 100% 100%;" >
+        <div style="background-image : url('https://as2.ftcdn.net/jpg/01/37/79/45/1000_F_137794590_08q2zi0Xp95tdIYZm81C1z4ds9CqbVHS.jpg');border:1px solid black;background-size: 100% 100%;" >
 
     <div class="container">
         <div id="content" style="margin-top:2em">
